--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Home">
-  <ion-content ng-controller="LandingController">
+  <ion-content ng-controller="HomeController">
 
 	<ion-slide-box auto-play="true" does-continue="true" slide-interval="2000">
 	  <ion-slide>
