--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,6 +33,9 @@
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
+        <ion-item menu-close ng-click="register()">
+          register
+        </ion-item>
         <ion-item menu-close href="#/app/cart">
           cart
         </ion-item>        
