--- a/www/templates/landing.html
+++ b/www/templates/landing.html
@@ -13,7 +13,7 @@
 	  		<div class="col col-100">
 	  			<div class="card">
 		  			<div class="item item-text-wrap item-energized">
-		  				I'm Ionic!
+		  				I'm Ionic! Hahahha!!
 		  			</div>
 		  		</div>
 	  		</div>
