--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,25 +1,48 @@
 <ion-modal-view>
+  <!-- Header  -->
   <ion-header-bar>
     <h1 class="title">Login</h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+      <button class="button button-clear button-positive" ng-click="closeLogin()">      Close
+      </button>
     </div>
   </ion-header-bar>
+
+  <!-- Content -->
   <ion-content>
     <form ng-submit="doLogin()">
+      <!-- Login form -->
       <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
+        <label class="item item-input item-icon-left">
+          <i class="icon ion-android-person"></i>
+          <span class="input-label ml30">Username</span>
           <input type="text" ng-model="loginData.username">
         </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
+        <label class="item item-input item-icon-left">
+          <i class="icon ion-locked"></i>
+          <span class="input-label ml30">Password</span>
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
+
+        <!-- Register and Forgot password -->
+        <div class="row mt50">
+            <div class="col col-67">
+              <button class="button button-clear button-positive">
+                    Forgot Password
+                </button>
+            </div>
+            <div class="col col-33">
+                <button class="button button-block button-balanced pull-right">
+                    Sign Up
+                </button>
+            </div>
+        </div>
       </div>
     </form>
+    
+    <!-- End content -->
   </ion-content>
 </ion-modal-view>
