--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -38,7 +38,10 @@
           <i class="ion-log-in"></i>
           Login
         </ion-item>
-
+        <ion-item menu-close href="#/app/register">
+          <i class="ion-arrow-up-a"></i>
+          Register
+        </ion-item>
         <ion-item menu-close href="#/app/order/history">
           <i class="ion-social-buffer"></i>
           Order History
