--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -11,10 +11,11 @@
 						<i class="icon ion-search placeholder-icon"></i>
 						<input type="text" placeholder="Search" ng-model="query">
 					</label>
-					<select ng-model="orderProp">
+					<!-- Filter option need to check again -->
+					<!-- <select ng-model="orderProp">
 						<option value="name">Name</option>
 						<option value="age">Age</option>
-					</select>
+					</select> -->
 				</div>		
 			</div>	
 		</div>
@@ -32,14 +33,15 @@
 			</div>
 		</div>
 
-		<div>
+		<!-- test radio button only -->
+		<!-- <div>
 		<label class="toggle toggle-royal">
 			<input type="checkbox">
 			<div class="track">
 				<div class="handle"></div>
 			</div>
 		</label>
-		</div>
+		</div> -->
 	</div> <!-- End of container-->
 
   </ion-content>
