--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -1,19 +1,21 @@
 <ion-view view-title="Categories">
 
-  <ion-content ng-controller="categories" ng-init="loadImages()">
-
-    <div class="row responsive-xs" ng-repeat="image in images" ng-if="$index % 2 === 0">
-	  <div class="col col-50" ng-if="$index < images.length">
+  <ion-content ng-controller="categories">
+	
+    <div class="row" ng-repeat="productTypeInfo in productTypeList" ng-if="$index % 2 == 0">
+	  <div class="col col-50" ng-if="$index < productTypeList.length">
 	  	<div class="sbox center">
-		  	<img ng-src="{{images[$index].src}}" width="100%">
-		  	<p>Category</p>
+		  	<img ng-src="{{img}}" width="100%">
+		  	<p>{{productTypeList[$index].code}}</p>
+		  	<p>{{productTypeList[$index].name}}</p>
 	  	</div>
 	  </div>
-	  <div class="col col-50" ng-if="$index + 1 < images.length">
-	    <div class="sbox center">
-	    	<img ng-src="{{images[$index + 1].src}}" width="100%" />
-	    	<p>Category</p>
-	    </div>
+	  <div class="col col-50" ng-if="$index+1 < productTypeList.length">
+	  	<div class="sbox center">
+		  	<img ng-src="{{img}}" width="100%">
+		  	<p>{{productTypeList[$index+1].code}}</p>
+		  	<p>{{productTypeList[$index+1].name}}</p>
+	  	</div>
 	  </div>
 	</div>
 
