--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -17,6 +17,7 @@
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
+
       <ion-list>
         <ion-item menu-close href="#/app/home">
           <i class="ion-home"></i>
@@ -46,7 +47,6 @@
           <i class="ion-social-buffer"></i>
           Order History
         </ion-item>
-        
         <ion-item menu-close href="#/app/cart">
           <i class="ion-android-cart"></i>
           Cart List
@@ -55,9 +55,12 @@
         <ion-item menu-close href="#/app/promotion">
           <i class="ion-film-marker"></i>
           Promotion
-        </ion-item>        
-        
-
+        </ion-item>
+        <ion-item menu-close href="#/app/productdetails">
+          Product Details - temp
+        </ion-item>          
+      </ion-list>
+      
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
