--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -31,7 +31,7 @@
           <i class="ion-cube"></i>
           Categories
         </ion-item>
-        <ion-item menu-close href="#/app/products"> 
+        <ion-item menu-close href="#/app/product/list"> 
           <i class="ion-wineglass"></i>
           Products
         </ion-item>
