--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -56,7 +56,7 @@
           <i class="ion-film-marker"></i>
           Promotion
         </ion-item>
-        <ion-item menu-close href="#/app/productdetails">
+        <ion-item menu-close href="#/app/product/details">
           Product Details - temp
         </ion-item>          
       </ion-list>
