--- a/www/templates/product.list.html
+++ b/www/templates/product.list.html
@@ -1,24 +1,20 @@
 <ion-view view-title="Product List">
 
   <ion-content ng-controller="productlist">
-	
-    <div class="row" ng-repeat="productTypeInfo in productTypeList" ng-if="$index % 2 == 0">
-    	<a class="col col-50" ng-if="$index < productTypeList.length" ng-href="#/app/cart" style="cursor: pointer">
+
+    <div class="row" ng-repeat="productInfo in productList" ng-if="$index % 2 == 0">
+    	<a class="col col-50" ng-if="$index < productList.length" ng-href="#/app/product/details">
 		  	<div class="sbox center">
-			  	<img ng-src="{{img}}" width="100%">
-			  	<p>
-			  		{{productTypeList[$index].name}}
-			  		<span class="badge badge-assertive">{{productTypeList[$index].type_count}}</span>
-			  	</p>
+			  	<img ng-src="{{img}}{{productList[$index].photo}}" width="100%">
+			  	<p class="ellipsis p10">{{productList[$index].name}}</p>
+			  	<p class="default-bg p10">MYR {{productList[$index].price}}</p>
 		  	</div>
 	  	</a>
-	  	<a class="col col-50" ng-if="$index < productTypeList.length" ng-href="#/app/cart" style="cursor: pointer">
+	  	<a class="col col-50" ng-if="$index < productList.length" ng-href="#/app/product/details">
 		  	<div class="sbox center">
-			  	<img ng-src="{{img}}" width="100%">
-			  	<p>
-			  		{{productTypeList[$index+1].name}}
-			  		<span class="badge badge-assertive">{{productTypeList[$index+1].type_count}}</span>
-			  	</p>
+			  	<img ng-src="{{img}}{{productList[$index+1].photo}}" width="100%">
+			  	<p class="ellipsis p10">{{productList[$index+1].name}}</p>
+			  	<p class="default-bg p10">MYR {{productList[$index+1].price}}</p>
 		  	</div>
 	  	</a>
 	</div>
