--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Sign Up">
-  <ion-content>
+  <ion-content ng-controller="user">
 	
 	<form>
 		<div class="list">
 		  <label class="item item-input item-floating-label">
-		    <span class="input-label">Username</span>
+		    <span class="input-label">Usernameaa</span>
 		    <input type="text" placeholder="Username">
 		  </label>
 		  <label class="item item-input item-floating-label">
