--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Sign Up">
   <ion-content ng-controller="user">
 	
-	<form>
+	<form ng-submit="submit()">
 		<div class="list">
 		  <label class="item item-input item-floating-label">
-		    <span class="input-label">Usernameaa</span>
+		    <span class="input-label">Username</span>
 		    <input type="text" placeholder="Username">
 		  </label>
 		  <label class="item item-input item-floating-label">
