--- a/www/css/login.css
+++ b/www/css/login.css
@@ -32,3 +32,56 @@ i.icon.ion-locked, i.icon.ion-android-person  {
 	border: 1px solid none;
 	background-color: #F1F1F1; 
 }
+
+.textbox-size {
+	border: 1px solid #000;
+	width: 40px;
+	height: 20px;
+}
+
+/*========= CART LIST ==============*/
+.item-thumbnail-left, .item-thumbnail-left .item-content {
+	padding-left: 8px;
+}
+
+.greenbox {
+	border: 1px solid transparent;
+    background: #33CD5F;
+    color: #fff;
+ 	padding: 25px;
+ 	padding-top: 0px;
+ 	padding-bottom: 3px;
+    font-weight: 400;
+}
+
+.cartImg {
+	max-width: 80px;
+    max-height: 80px;
+    width: 100%;
+    height: 100%;
+}
+
+.btnCheckOut {
+	background-color: #F39C12; 
+	color: #fff; 
+	font-weight: 500;
+	 width: 100%;
+	border: 1px solid transparent;
+}
+
+.btnContinue {
+	background-color: #7F8C8D; 
+	color: #fff; 
+}
+
+.total-color {
+	color: #3498DB;
+}
+
+.subtotal {
+	font-weight: bold;
+	font-size: 14px;
+	color: #000;
+}
+
+/*========= ORDER SUMMARY ==============*/
