--- a/www/templates/product.list.html
+++ b/www/templates/product.list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Product List">
+<ion-view view-title="Product List" class="bg">
 
   <ion-content ng-controller="productlist">
 
