--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -17,9 +17,11 @@
                </label>
 
                 <form>
-                  <p class="font-small">Quantity: 
+                <!-- Submit quantity data -->
+                 <div class="item item-input">
+                    <span class="input-label font-small">Quantity:</span>
                     <input type="text">
-                  </p>
+                  </div>
                      
                   <a class="button button-balanced" ng-href="#/app/cart/list">
                      <i class="ion-android-cart"></i>&nbsp;&nbsp;&nbsp;Add to Cart
