--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,41 +8,84 @@
     </div>
   </ion-header-bar>
 
-  <!-- Content -->
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <!-- Login form -->
-      <div class="list">
-        <label class="item item-input item-icon-left">
-          <i class="icon ion-android-person"></i>
-          <span class="input-label ml30">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input item-icon-left">
-          <i class="icon ion-locked"></i>
-          <span class="input-label ml30">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
+  <!-- Tabs -->
+  <ion-tabs class="tabs-positive tabs-icon-only">
+    <ion-tab title="Login">
+      <!-- Tab 1 content -->
+      <form ng-submit="doLogin()">
+        <!-- Login form -->
+        <div class="list">
+          <label class="item item-input item-icon-left">
+            <i class="icon ion-android-person"></i>
+            <span class="input-label ml30">Username</span>
+            <input type="text" ng-model="loginData.username">
+          </label>
+          <label class="item item-input item-icon-left">
+            <i class="icon ion-locked"></i>
+            <span class="input-label ml30">Password</span>
+            <input type="password" ng-model="loginData.password">
+          </label>
+          <label class="item">
+            <button class="button button-block button-positive" type="submit">Log in</button>
+          </label>
 
-        <!-- Register and Forgot password -->
-        <div class="row mt50">
-            <div class="col col-67">
-              <button class="button button-clear button-positive">
-                    Forgot Password
-                </button>
-            </div>
-            <div class="col col-33">
-                <button class="button button-block button-balanced pull-right">
-                    Sign Up
-                </button>
-            </div>
+          <!-- Register and Forgot password -->
+          <div class="row mt50">
+              <div class="col col-67">
+                <button class="button button-clear button-positive">
+                      Forgot Password
+                  </button>
+              </div>
+              <div class="col col-33">
+                  <button class="button button-block button-balanced pull-right">
+                      Sign Up
+                  </button>
+              </div>
+          </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </ion-tab>
+
+    <ion-tab title="Sign Up">
+      <!-- Tab 2 content -->
+        <ion-view view-title="Sign Up">
+          <ion-content ng-controller="user">
+          
+          <form ng-submit="submit()">
+            <div class="list">
+              <label class="item item-input item-floating-label">
+                <span class="input-label">Username</span>
+                <input type="text" placeholder="Username">
+              </label>
+              <label class="item item-input item-floating-label">
+                <span class="input-label">Email</span>
+                <input type="text" placeholder="Email">
+              </label>
+              <label class="item item-input item-floating-label">
+                <span class="input-label">Password</span>
+                <input type="password" placeholder="Password">
+              </label>
+              <label class="item item-input item-floating-label">
+                <span class="input-label">Confirm Password</span>
+                <input type="password" placeholder="Confirm Password">
+              </label>
+            </div>
+            <div class="row ro-center" class="col col-75 col-offset-25">
+              <button class="button button-block button-positive">
+                Submit
+              </button>
+            </div>
+          </form>
+
+          </ion-content>
+        </ion-view>
+    </ion-tab>
+  </ion-tabs>
+
+  <!-- Content -->
+  <!-- <ion-content> -->
+    
     
     <!-- End content -->
-  </ion-content>
+  <!-- </ion-content> -->
 </ion-modal-view>
