--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,9 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Menu</h1>
+      <ion-view>
+        <img class="title-image" src="http://wine-enterprise.com/images/whiskyweb1_02.gif" width="100%"/>
+      </ion-view>
     </ion-header-bar>
     <ion-content>
 
