--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -47,11 +47,6 @@
           Login
         </ion-item>
 
-        <ion-item menu-close href="#/app/register">
-          <i class="ion-arrow-up-a"></i>
-          Register
-        </ion-item>
-
         <ion-item menu-close href="#/app/order/history">
           <i class="ion-social-buffer"></i>
           Order History
@@ -68,8 +63,8 @@
           Promotion
         </ion-item>
 
-        <ion-item menu-close href="#/app/product/details">
-          Product Details - temp
+        <ion-item menu-close href="#/app/profile">
+          Profile - temp
         </ion-item> 
 
         <!-- <ion-item menu-close href="#/app/cart/list">
