--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -1,5 +1,58 @@
 <ion-view view-title="Order History">
   <ion-content>
-    <h1>Order History</h1>
+
+	  <div class="item item-text-wrap p0">
+
+	    <div class="row col-header center font-small">
+          <div class="col">Order id</div>
+          <div class="col">Status</div>
+          <div class="col">Product name</div>
+          <div class="col">Quantity</div>
+          <div class="col">Price</div>
+        </div>
+<!-- 
+        <div class="row col-bg center col-line font-small">
+        	<div class="col">56456</div>
+			<div class="col">Make Payment</div>
+			<div class="col">Red Wine</div>
+			<div class="col">5</div>
+			<div class="col">RM 45.00</div>
+        </div>
+
+        <div class="row col-bg center col-line font-small">
+        	<div class="col">23412</div>
+			<div class="col">Make Payment</div>
+			<div class="col">Whisky</div>
+			<div class="col">2</div>
+			<div class="col">RM 243.50</div>
+        </div> -->
+
+        <ul class="list">
+		    <div class="row item font-small center">
+		      	<div class="col">2332</div>
+				<div class="col">Order Approved</div>
+				<div class="col">Whisky</div>
+				<div class="col">3</div>
+				<div class="col">RM 107.50</div>
+		    </div>
+		    <div class="row item font-small center">
+		      	<div class="col">22342</div>
+				<div class="col">Order Approved</div>
+				<div class="col">Red Wine</div>
+				<div class="col">5</div>
+				<div class="col">RM 55.50</div>
+		    </div>
+		    <div class="row item font-small center">
+		      	<div class="col">6742</div>
+				<div class="col">Pending Order</div>
+				<div class="col">Whisky</div>
+				<div class="col">7</div>
+				<div class="col">RM 243.50</div>
+		    </div>
+		</ul>
+
+	  </div>
+	
+
   </ion-content>
 </ion-view>
