--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -62,13 +62,13 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<a class="button btn-block btnContinue" ng-href="#/app/categories">
+				<a class="button btn-block btnContinue font-medium" ng-href="#/app/categories">
 				  Continue Shopping
 				</a>
 			</div>
 			
 			<div class="col">
-				<a class="button btn-block btnCheckOut" ng-href="#/app/order/summary">
+				<a class="button btn-block btnCheckOut font-medium" ng-href="#/app/order/summary">
 				  Check Out
 				</a>
 			</div>
