--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Home">
   <ion-content ng-controller="HomeController">
 
-	<ion-slide-box auto-play="true" does-continue="true" slide-interval="2000">
-	  <ion-slide>
+	<ion-slide-box auto-play="false" does-continue="true">
+	  <ion-slide ng-click="nextSlide()">
 	  	<!-- First slide -->
 	  	<div class="row">
 		  	<div class="col col-100">
@@ -19,10 +19,10 @@
 	  		</div>
 	  	</div>
 	  </ion-slide>
-	  <ion-slide>
+	  <ion-slide ng-click="nextSlide()">
 	    <div class="box blue"><h1>BLUE</h1></div>
 	  </ion-slide>
-	  <ion-slide>
+	  <ion-slide ng-click="nextSlide()">
 	     <div class="box yellow"><h1>YELLOW</h1></div>
 	  </ion-slide>
 	</ion-slide-box>
