--- a/www/templates/order.summary.html
+++ b/www/templates/order.summary.html
@@ -39,7 +39,7 @@
 		<!-- Row for confirm button -->
 		<div class="row">
 			<div class="col">
-				<a class="button button-block btnCheckOut">Confirm</a>
+				<a class="button button-block btnCheckOut" ng-href="#/app/guest">Confirm</a>
 			</div>
 		</div>	
 		</form>
