--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -12,15 +12,15 @@
               <img ng-src="{{img.src}}">      
           </div>
           <div class="col col-50 center">
-              <label class="item item-input">
+              <label class="item item-input font-small">
                 <span class="input-label">Price:</span>
                 <span class="input-label">MYR {{productData[0].price}}</span>
               </label>
-              <label class="item item-input">
+              <label class="item item-input font-small">
                 <span class="input-label">Qty:</span>
                 <input type="text">
               </label>
-              <a class="button button-balanced" ng-href="#/app/cart/list"><i class="ion-android-cart"></i> Add to Cart</a>
+              <a class="button button-balanced font-medium" ng-href="#/app/cart/list"><i class="ion-android-cart"></i> Add to Cart</a>
           </div>
         </div>
         <!-- Start of the other details -->
