--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -21,7 +21,7 @@
 		  </label>
 		</div>
 		<div class="row ro-center" class="col col-75 col-offset-25">
-			<button class="button button-block button-positive">
+			<button class="button button-block button-positive font-medium">
 			  Submit
 			</button>
 		</div>
