--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -37,7 +37,7 @@
           Categories
         </ion-item>
 
-        <ion-item menu-close href="#/app/product/list"> 
+        <ion-item menu-close href="#/app/product/list/"> 
           <i class="ion-wineglass"></i>
           Products
         </ion-item>
