changed back home.html data

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Home">
   <ion-content ng-controller="HomeController">
 
-	<ion-slide-box auto-play="false" does-continue="true">
+	<ion-slide-box auto-play="true" does-continue="true" slide-interval="2000">
 	  <ion-slide ng-click="nextSlide()">
 	  	<!-- First slide -->
 	  	<div class="row">
