home with manual slide, not click

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,10 @@
 <ion-view view-title="Home">
   <ion-content ng-controller="HomeController">
 
-	<ion-slide-box auto-play="true" does-continue="true" slide-interval="2000">
-	  <ion-slide ng-click="nextSlide()">
+	<ion-slide-box active-slide="1" 
+     on-slide-changed="slideHasChanged($index)"
+       does-continue="true" auto-play="true" slide-interval="3000">
+	  <ion-slide>
 	  	<!-- First slide -->
 	  	<div class="row">
 		  	<div class="col col-100">
@@ -19,10 +21,10 @@
 	  		</div>
 	  	</div>
 	  </ion-slide>
-	  <ion-slide ng-click="nextSlide()">
+	  <ion-slide>
 	    <div class="box blue"><h1>BLUE</h1></div>
 	  </ion-slide>
-	  <ion-slide ng-click="nextSlide()">
+	  <ion-slide>
 	     <div class="box yellow"><h1>YELLOW</h1></div>
 	  </ion-slide>
 	</ion-slide-box>
