--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -58,18 +58,18 @@
                 <span class="input-label font-small">Username</span>
                 <input type="text" ng-model="userdata.username" placeholder="Username">
               </label>
-              <!-- <label class="item item-input item-floating-label">
+              <label class="item item-input item-floating-label">
                 <span class="input-label font-small">Email</span>
                 <input type="text" ng-model="userdata.email" placeholder="Email">
-              </label> -->
+              </label>
               <label class="item item-input item-floating-label">
                 <span class="input-label font-small">Password</span>
                 <input type="password" ng-model="userdata.password" placeholder="Password">
               </label>
-              <!-- <label class="item item-input item-floating-label">
+              <label class="item item-input item-floating-label">
                 <span class="input-label font-small">Confirm Password</span>
-                <input type="password" placeholder="Confirm Password">
-              </label> -->
+                <input type="password" ng-model="userdata.confpwd" placeholder="Confirm Password">
+              </label>
             </div>
             <div class="row ro-center" class="col col-75 col-offset-25">
               <button type="submit" class="button button-block button-positive">Submit</button>
