--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -4,25 +4,32 @@
     <div class="container">
         <div class="row default-bg">
           <div class="col col-100 center">
-            <label>{{productData[0].name}}</label>
+            <label>{{productDetails.name}}</label>
           </div>
         </div>
         <div class="row mt5">
           <div class="col col-50 sbox">
-              <img ng-src="{{img.src}}">      
+              <img ng-src="{{img}}{{productDetails.photo}}">      
           </div>
           <div class="col col-50 center">
+            <form ng-submit="cart(productDetails)">
+              <!-- <input type="text" ng-model="productDetails.id">
+              <input type="text" ng-model="productDetails.id"> -->
               <label class="item item-input font-small">
-                <span class="input-label">Price:</span>
-                <span class="input-label">MYR {{productData[0].price}}</span>
+                <span class="input-label">Price: MYR</span>
+                <input type="text" ng-model="productDetails.price" />
+                <!--  <span class="input-label" ng-model="productData.price">MYR {{productDetails.price}}</span> -->
               </label>
               <label class="item item-input font-small">
                 <span class="input-label">Qty:</span>
-                <input type="text">
+                <input type="text" ng-model="productDetails.qty">
               </label>
-              <a class="button button-balanced font-medium" ng-href="#/app/cart/list"><i class="ion-android-cart"></i> Add to Cart</a>
+              <!--  ng-href="#/app/cart/list" -->
+              <button type="submit" class="button button-balanced font-medium"><i class="ion-android-cart"></i> Add to Cart</button>
+            </form>
           </div>
         </div>
+        <!-- follow sample above to print dynamic data ex: productDetails.name -->
         <!-- Start of the other details -->
           <div class="row mt5 mb5">
             <div class="col col-33 table-header">
